chore: add google site verification tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <meta name="google-site-verification" content="KdcUrt-kxiRn7j4x7yr5MDm0jmIknEfgikttRhG5yMw" />
     <title>Klet Development</title>
   </head>
   <body>
